# batteryctl

./: .gitignore  CMakeLists.txt  README.md  battery.cpp  battery.h  batterycontrol.ui  batteryctl.desktop  batteryctl.service  batteryicon.h  chargethreshold.cpp  chargethreshold.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  org.thinkpads.pkexec.batteryctl.policy  qbatteryctl.pro  resources.qrc  storage.cpp  storage.h  thinkpads_org_about.cpp
core/: battery.cpp  battery.h
debian/: batteryctl.dirs  changelog  control  copyright
ui/: batteryicon.cpp  chargethreshold.cpp  chargethreshold.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  thinkpads_org_about.h  thinkpads_org_about.ui
